Add background image

--- a/tex/common.tex
+++ b/tex/common.tex
@@ -19,6 +19,17 @@
 	anchorcolor=yellow
 ]{hyperref}
 \usepackage{graphicx}
+\usepackage[pages=some]{background}
+\backgroundsetup{
+	scale=1,
+	color=black,
+	opacity=0.2,
+	angle=0,
+	contents={%
+	\includegraphics{
+		../img/background}
+	}%
+}
 
 \newcommand\Par[1]{
 
