--- a/tex/resume.tex
+++ b/tex/resume.tex
@@ -3,6 +3,8 @@
 \begin{document}
 \begin{titlepage}
 
+\BgThispage
+
 \Title{Trofim Andreevich Fedoseev}
 \TitleSub{student}
 
@@ -61,6 +63,7 @@ it to simplify debugging for students who study x87
 instruction set. You can see in on github here:
 \href{https://github.com/fedoseevtaf/nastx}{fedoseevtaf/nastx}
 
+\clearpage
 \end{titlepage}
 \end{document}
 
