Fix subsection title in ru-resume

--- a/tex/ru-resume.tex
+++ b/tex/ru-resume.tex
@@ -42,7 +42,7 @@ GitHub: fedoseevtaf
 компоненты написанные на Си взаимодействуют с компонентами,
 написанными на языке ассемблера.
 
-\Section{Personal projects}
+\Section{Мои проекты}
 
 \Blockquote{
 \Subsection{mj}
